WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226728
[SOUP] Several timing tests failing since
r278477
https://bugs.webkit.org/show_bug.cgi?id=226728
Summary
[SOUP] Several timing tests failing since r278477
Carlos Garcia Campos
Reported
2021-06-07 06:15:22 PDT
responseBodyBytesReceived and responseBodyDecodedSize are expected to be always filled, and not only when shouldCaptureExtraNetworkLoadMetrics() returns true.
Attachments
Patch
(2.23 KB, patch)
2021-06-07 06:17 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Patch for landing
(2.71 KB, patch)
2021-06-07 09:59 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-06-07 06:17:31 PDT
Created
attachment 430741
[details]
Patch
Carlos Garcia Campos
Comment 2
2021-06-07 09:59:38 PDT
Created
attachment 430758
[details]
Patch for landing
Carlos Garcia Campos
Comment 3
2021-06-08 01:00:26 PDT
Committed
r278596
(
238586@main
): <
https://commits.webkit.org/238586@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug