[SOUP] Several timing tests failing since r278477 https://bugs.webkit.org/show_bug.cgi?id=226728

Reviewed by Michael Catanzaro.

responseBodyBytesReceived and responseBodyDecodedSize are expected to be always filled, and not only when
shouldCaptureExtraNetworkLoadMetrics() returns true.

Fixes: imported/w3c/web-platform-tests/navigation-timing/test_document_onload.html
       imported/w3c/web-platform-tests/navigation-timing/nav2_test_attributes_values.html
       imported/w3c/web-platform-tests/resource-timing/cors-preflight.any.worker.html

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::createRequest):

Canonical link: https://commits.webkit.org/238586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278596 268f45cc-cd09-0410-ab3c-d52691b4dbfc